(vendored_dirs jsoo-code-mirror merlin-js)

(library
 (name x_ocaml_lib)
 (libraries irmin-indexeddb irmin-git js_of_ocaml js_of_ocaml-ppx js_of_ocaml-toplevel ppx_blob)
 (preprocess
  (pps ppx_blob)))

(rule
 (mode promote)
 (target x-ocaml.js)
 (deps src/x_ocaml.bc.js)
 (action
  (copy %{deps} %{target})))

(rule
 (mode promote)
 (target x-ocaml.worker+effects.js)
 (deps worker/effects/x_worker.bc.js)
 (action
  (copy %{deps} %{target})))

(rule
 (mode promote)
 (target x-ocaml.worker.js)
 (deps worker/no-effects/x_worker.bc.js)
 (action
  (copy %{deps} %{target})))