(vendored_dirs jsoo-code-mirror merlin-js)



(rule
 (mode promote)
 (target x-ocaml.js)
 (action
  (copy _build/default/src/x_ocaml.bc.js %{target})))

(rule
 (mode promote)
 (target x-ocaml.worker+effects.js)
 (action
  (copy _build/default/worker/x_worker.bc.js %{target})))  ; Adjust path if needed

(rule
 (mode promote)
 (target x-ocaml.worker.js)
 (action
  (copy _build/default/worker/x_worker.bc.js %{target})))  ; Adjust path if needed
