(executable
 (name x_worker)
 (libraries brr js_of_ocaml js_of_ocaml-ppx js_of_ocaml-toplevel x_protocol merlin-js.worker ocamlformat-lib ocamlformat-lib.parser_extended irmin-indexeddb irmin-git)
 (modes byte)
 (js_of_ocaml
  (javascript_files x_worker.js)
  (flags :standard)))

(rule
 (targets export.txt)
 (deps export-stdlib.txt)
 (action
  (with-stdout-to
   %{targets}
   (progn
    (cat %{deps})
    (echo "Ast_mapper\n")))))

(rule
 (target export-stdlib.txt)
 (action
  (run jsoo_listunits -o %{target} stdlib)))